testdata/invalid/property_invalid_02.lisp
;;error:3:17-18:expected attribute list
(defcolumns (X :i16))
(defproperty p1 X X)
